<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculatorExercise">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        android:paddingTop="70dp">

        <TextView
            android:id="@+id/txtEquation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingRight="20dp"
            android:text="0"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/txtAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingRight="20dp"
            android:text="0"
            android:textColor="@color/black"
            android:textSize="42dp" />

        <Button
            android:id="@+id/btnClear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="Clear" />

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:paddingLeft="0dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btnSeven"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_weight="1"
                    android:text="@string/seven"
                    app:cornerRadius="50dp" />

                <Button
                    android:id="@+id/btnEight"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_weight="1"
                    android:text="@string/eight"
                    app:cornerRadius="50dp" />

                <Button
                    android:id="@+id/btnNine"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:text="@string/nine"
                    app:cornerRadius="50dp" />

                <Button
                    android:id="@+id/btnDivide"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_weight="1"
                    android:text="@string/divide"
                    app:cornerRadius="50dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btnFour"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_weight="1"
                    android:text="4"
                    app:cornerRadius="50dp" />

                <Button
                    android:id="@+id/btnFive"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_weight="1"
                    android:text="@string/five"
                    app:cornerRadius="50dp" />

                <Button
                    android:id="@+id/btnSix"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_weight="1"
                    android:text="@string/six"
                    app:cornerRadius="50dp" />

                <Button
                    android:id="@+id/btnMul"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_weight="1"
                    android:text="@string/multiply"
                    app:cornerRadius="50dp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btnOne"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_weight="1"
                    android:text="@string/one"
                    app:cornerRadius="50dp" />

                <Button
                    android:id="@+id/btnTwo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_weight="1"
                    android:text="@string/two"
                    app:cornerRadius="50dp" />

                <Button
                    android:id="@+id/btnThree"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_weight="1"
                    android:text="@string/three"
                    app:cornerRadius="50dp" />

                <Button
                    android:id="@+id/btnSub"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_weight="1"
                    android:text="@string/sub"
                    app:cornerRadius="50dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="164dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btnDot"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_weight="1"
                    android:text="@string/dot"
                    app:cornerRadius="50dp" />

                <Button
                    android:id="@+id/btnZero"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_weight="1"
                    android:text="@string/zero"
                    app:cornerRadius="50dp" />

                <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_weight="1"
                    android:text="@string/add"
                    app:cornerRadius="50dp" />

                <Button
                    android:id="@+id/btnEqual"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_weight="1"
                    android:text="@string/equal"
                    app:cornerRadius="50dp" />
            </TableRow>
        </TableLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>